--- a/index.html
+++ b/index.html
@@ -3,8 +3,36 @@
     <head>
         <title>Calculator</title>
         <script src="calculator.js" defer></script>
+        <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        
+        <div class="calculator">
+            <div class="display"></div>
+            <div class="content">
+            <div class="numbers">
+                <button id="one">1</button>
+                <button id="two">2</button>
+                <button id="three">3</button>
+                <button id="four">4</button>
+                <button id="five">5</button>
+                <button id="six">6</button>
+                <button id="seven">7</button>
+                <button id="eight">8</button>
+                <button id="nine">9</button>
+                <button id="decimal">.</button>
+                <button id="zero">0</button>
+                <button id="negative">(-)</button>
+                
+            </div>
+            <div class="operations">
+                <button id="plus">+</button>
+                <button id="minus">-</button>
+                <button id="times">*</button>
+                <button id="divided">/</button>
+                <button id="equals">=</button>
+            </div>
+            </div>
+            <button id="clear">Clear</button>
+        </div>
     </body>
 </html>
